--- a/src/lab/Circular_Coil/css/experiment.css
+++ b/src/lab/Circular_Coil/css/experiment.css
@@ -9,18 +9,11 @@ chart {
 	top: 9%;
 	opacity: 0.9;
 }
-#showRod {
-    font-weight: bold;
-    font-size: 100%;
+#emissivityLabel {
+    display:inline;
 }
-#showNormal{
-    position: relative;
-    left: 267px;
-    top: 690px;
+#emissivityValue {
+    display:inline;
 }
-#magneticFieldLabel{
-	display:inline;
-}
-#magneticFieldValue{
-	padding: 10px 7px;
-}
+/* Fix for Bootstrap 3 with Angular UI Bootstrap */
+
